Concept fix for the signin-button logged in state: -For mobile view name is replaced with "user" icon -For desktop view name is truncated to first name only (12 char max)

--- a/styles/_header-footer.scss
+++ b/styles/_header-footer.scss
@@ -20,7 +20,7 @@
 	display: block;
 	position: relative;
 	left: 50%;
-	margin-left: -105px;
+	margin-left: -96px;
 	margin-top:8px;
 	height:46px;
 	width: 160px;
