--- a/styles/course_desc.css
+++ b/styles/course_desc.css
@@ -65,7 +65,7 @@ img {
   display: block;
   position: relative;
   left: 50%;
-  margin-left: -105px;
+  margin-left: -96px;
   margin-top: 8px;
   height: 46px;
   width: 160px;
